# ase-bot-trading-automation

./: .bot_pids  .env  .gitignore  API_KEYS_AND_ACCOUNTS_ANALYSIS.md  ASE_BOT_COMPLETE_DOCUMENTATION.md  AUDIT_REPORT_2025_12_13.md  COMPILATION_REPORT.md  COMPILATION_SUCCESS_REPORT.md  COMPREHENSIVE_ANALYSIS_V2.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  COMPREHENSIVE_SYSTEM_ANALYSIS_V3.md  CONTRIBUTING.md  CORE_INFRASTRUCTURE_V3_CHANGELOG.md  DATABASE_DOCUMENTATION.md  DEEP_SYSTEM_ANALYSIS_v2.md  DEPLOYMENT_FINAL_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  FINAL_DEBUG_SUMMARY.md  FIX_SUMMARY_2025_12_13.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS_ROADMAP.md  ODPOWIEDZI_NA_PYTANIA.md  ODPOWIEDZI_TECHNICZNE.md  PORT_CONFIGURATION_SUMMARY.md  POSTGRESQL_EMAIL_INTEGRATION.md  SENTRY_INTEGRATION.md  SERVER_TEST_REPORT.md  SUPABASE_MIGRATION_REPORT.md  SYSTEM_DOCUMENTATION.md  VPS_IMPLEMENTATION_REPORT.md  add_leverage_column.py  advanced-monitoring.sh  analyze_keys.py  analyze_orders.py  app.py  ase_bot_production_analyzer.py  auto_monitor.sh  backup-rollback.sh  (+98 more)
Automatyczny Stock Market 1.0/: ACCOUNT_MAPPING.md  Dockerfile.optimized  README.md  VPS_INITIALIZATION_SUMMARY.md  add_api_key.py  add_sky72199_api_key.py  asebot.service  ccxt_exchanges.txt  check_user_account.py  check_user_status.py  deploy-optimized.sh  deploy_docker.sh  deploy_updated_backend.sh  docker-compose.optimized.yml  find_target_account.py  launch_bot.py  launch_bot_direct.py  (+15 more)
Automatyczny Stock Market 1.0/server_snapshot_20251007/gateway/: Cargo.toml
(+447 files in other folders)
